--- a/dev/nova.html
+++ b/dev/nova.html
@@ -1,9 +1,5 @@
 <!DOCTYPE html>
-<html>
-  <!--
-    page.path   : layout/core.md
-    page.layout : core
-  -->
+<html><!-- page.layout : nova -->
   <head>
     <meta charset="utf-8" />
     <!-- Begin Jekyll SEO tag v2.8.0 -->
