--- a/x/index.html
+++ b/x/index.html
@@ -1,6 +1,3 @@
----
-title: index
----
 <!DOCTYPE html>
 <html><!-- page.layout : nova -->
   <head>
@@ -21,9 +18,9 @@ title: index
   <body>
     <style></style>
     <div class="_view">
-      <div class="_layout _960 _m_center">
+      <div class="_layout _960 _m_center _boxline">
         <div class="_main">
-          <div class="_article">index
+          <div class="_article _pa_5">index
           </div>
         </div>
       </div>
