--- a/x/home.html
+++ b/x/home.html
@@ -3,7 +3,7 @@
   <!-- page.path   : {{ page.path }} -->
   <head><meta charset="utf-8" />
     <!-- Begin Jekyll SEO tag v2.8.0 -->
-    <title>Index | Core Development</title>
+    <title>Home | Core Development</title>
     <!-- End Jekyll SEO tag -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=5.0,shrink-to-fit=no" />
@@ -20,10 +20,7 @@
         <main class="_main">
           <header class="_header"><h1><a href="/core-dev/x">Core Development</a></h1></header>
           <article class="_article">
-<a href="home.html">Home</a>
-<a href="page.html">Page</a>
-<a href="demo-old.html">Old</a>
-<a href="demo-new.html">New</a>
+            <pre>Home</pre>
           </article>
         </main>
       </div>
