linking pugs page

--- a/_pugs/page.html
+++ b/_pugs/page.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=5.0,shrink-to-fit=no" />
     <meta id="_theme-color"  name="theme-color"  content="#222" />
     <meta id="_color-scheme" name="color-scheme" content="light dark" />
-    <link id="_style" rel="stylesheet" href="/core-dev/assets/core/css/style.css?v=0.0.1" />
+    <link id="_style" rel="stylesheet" href="/core-dev/assets/core/css/style.css?v=0.0.2" />
     <!-- custom-head -->
     <!--[if lt IE 9]><script src="//unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"><![endif]-->
     <style></style>
@@ -18,14 +18,14 @@
     <div class="_view">
       <div class="_layout">
         <main class="_main">
-          <header class="_header"><h1><a href="/core-dev/x">Core Development</a></h1></header>
+          <header class="_header"><h1><a href="/core-dev/_pugs/">Core Development</a></h1></header>
           <article class="_article">
             <pre>Page</pre>
           </article>
         </main>
       </div>
-    </div><div class="_credit"><a class="_credit_link" href="/core-dev/x" title="Go to the Core">✨ Made with Core</a></div><script>window.ghost = 'bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlvLHRoZW1lanMucGFnZXMuZGV2';</script>
-    <script src="/core-dev/assets/core/js/script.js?v=0.0.1"></script><!-- anchors <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script><script>anchors?.add();</script> -->
+    </div><div class="_credit"><a class="_credit_link" href="/core-dev/_pugs/" title="Go to the Core">✨ Made with Core</a></div><script>window.ghost = 'bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlvLHRoZW1lanMucGFnZXMuZGV2';</script>
+    <script src="/core-dev/assets/core/js/script.js?v=0.0.2"></script><!-- anchors <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script><script>anchors?.add();</script> -->
     <!-- custom-body -->
   </body>
 </html>
