--- a/x/index.html
+++ b/x/index.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html class="_core_layout" lang="en-US"><!-- page.layout : pug/core -->
   <!-- page.path   : {{ page.path }} -->
   <head><meta charset="utf-8" />
@@ -18,7 +18,7 @@
     <div class="_view">
       <div class="_layout">
         <main class="_main">
-          <header class="_header"><h1><a href="/core-dev/_includes/pugs/">Core Development</a></h1></header>
+          <header class="_header"><h1><a href="/core-dev/x/">Core Development</a></h1></header>
           <article class="_article">
             <div>
               <p>
@@ -29,11 +29,11 @@
               </p>
             </div>
             <pre>site_url: /core-dev/
-pugs_url: /core-dev/_includes/pugs/</pre>
+pugs_url: /core-dev/x/</pre>
           </article>
         </main>
       </div>
-    </div><div class="_credit"><a class="_credit_link" href="/core-dev/_includes/pugs/" title="Go to the Core">✨ Made with Core</a></div><script>window.ghost = 'bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlvLHRoZW1lanMucGFnZXMuZGV2';</script>
+    </div><div class="_credit"><a class="_credit_link" href="/core-dev/x/" title="Go to the Core">✨ Made with Core</a></div><script>window.ghost = 'bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlvLHRoZW1lanMucGFnZXMuZGV2';</script>
     <script src="/core-dev/assets/core/js/script.js?v=0.0.2"></script><!-- anchors <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script><script>anchors?.add();</script> -->
     <!-- custom-body -->
   </body>
