--- a/x/index.html
+++ b/x/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html class="_core_layout" lang="en-US"><!-- page.layout : pug/core -->
-  <!-- page.path   : {{ page.path }} -->
   <head><meta charset="utf-8" />
     <!-- Begin Jekyll SEO tag v2.8.0 -->
     <title>Index | Core Development</title>
@@ -29,7 +28,7 @@
               </p>
             </div>
             <pre>site_url: /core-dev/
-pugs_url: /core-dev/x/</pre>
+home_url: /core-dev/x/</pre>
           </article>
         </main>
       </div>
