--- a/x/index.html
+++ b/x/index.html
@@ -1,39 +1,59 @@
 <!DOCTYPE html>
-<html class="_core_layout" lang="en-US"><!-- page.layout : pug/core -->
-  <head><meta charset="utf-8" />
-    <!-- Begin Jekyll SEO tag v2.8.0 -->
-    <title>Index | Core Development</title>
-    <!-- End Jekyll SEO tag -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=5.0,shrink-to-fit=no" />
-    <meta id="_theme-color"  name="theme-color"  content="#222" />
-    <meta id="_color-scheme" name="color-scheme" content="light dark" />
-    <link id="_style" rel="stylesheet" href="/core-dev/assets/core/css/style.css?v=0.0.2" />
-    <!-- custom-head -->
-    <!--[if lt IE 9]><script src="//unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"><![endif]-->
+<html class="_core_layout" lang="en-US"><!-- page.path   : index.html -->
+  <!-- page.layout : pug/core -->
+  <head>
+    <meta charset="utf-8"/><!-- Begin Jekyll SEO tag v2.8.0 -->
+    <title>Index | Core Development</title><!-- End Jekyll SEO tag -->
+    <meta name="viewport" content="width=device-width,initial-scale=1"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+    <meta id="_color_scheme" name="color-scheme" content="light dark"/>
+    <meta id="_theme_color" name="theme-color" content="#222"/>
+    <link id="_style" rel="stylesheet" href="/core-dev/assets/core/css/style.css?v=!{version}"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
     <style></style>
   </head>
   <body>
-    <div class="_view">
-      <div class="_layout">
-        <main class="_main">
-          <header class="_header"><h1><a href="/core-dev/x/">Core Development</a></h1></header>
-          <article class="_article">
+    <div class="_views">
+      <div class="_view">
+        <header class="_header">
+          <div class="_layout">
+            <div class="_flex">
+              <div class="_fill">
+                <div class="_logo"><a href="/core-dev/x">Core Development</a></div>
+              </div>
+              <div class="_fit">
+                <div class="_theme_switch _needjs"><a href="#" onclick="event.preventDefault();theme.change();" title="Change Theme (Alt+T)"><i class="_icon"><i class="isvg">
+                        <svg viewBox="0 0 24 24">
+                          <path d="M19,3H14V5H19V18L14,12V21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M10,18H5L10,12M10,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H10V23H12V1H10V3Z" fill="currentColor" fill-opacity="1"></path>
+                        </svg></i></i></a></div>
+              </div>
+            </div>
+          </div>
+        </header>
+        <nav class="_nav">
+          <div class="_layout">
             <div>
-              <p>
 <a href="home.html">Home</a>
 <a href="page.html">Page</a>
 <a href="demo-old.html">Old</a>
 <a href="demo-new.html">New</a>
-              </p>
             </div>
-            <pre>site_url: /core-dev/
-home_url: /core-dev/x/</pre>
+          </div>
+        </nav>
+        <main class="_main">
+          <article class="_article _layout">
+            <pre class="_m0">site_url: /core-dev
+home_url: /core-dev/x
+build   : 17.18.3514</pre>
           </article>
         </main>
+        <footer class="_footer">
+          <div class="_layout"><code>// footer</code>
+          </div>
+        </footer>
       </div>
-    </div><div class="_credit"><a class="_credit_link" href="/core-dev/x/" title="Go to the Core">✨ Made with Core</a></div><script>window.ghost = 'bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlvLHRoZW1lanMucGFnZXMuZGV2';</script>
-    <script src="/core-dev/assets/core/js/script.js?v=0.0.2"></script><!-- anchors <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script><script>anchors?.add();</script> -->
-    <!-- custom-body -->
+    </div>
+    <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a></div>
+    <script>window.ghost = 'bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
+    <script type="text/javascript" src="/core-dev/assets/themejs/themejs_v2.0.js?v=!{version}"></script><!-- custom-body -->
   </body>
 </html>
