--- a/x/index.html
+++ b/x/index.html
@@ -8,8 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/core-dev/assets/core/css/style.css?v=!{version}"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
-    <style></style>
+    <link id="_style" rel="stylesheet" href="/core-dev/assets/core/css/style.css?v=0.0.2"/><!-- custom-head -->
+    <!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="_views">
@@ -18,7 +18,8 @@
           <div class="_layout">
             <div class="_flex">
               <div class="_fill">
-                <div class="_logo"><a href="/core-dev/x">Core Development</a></div>
+                <div class="_logo">
+                </div>
               </div>
               <div class="_fit">
                 <div class="_theme_switch _needjs"><a href="#" onclick="event.preventDefault();theme.change();" title="Change Theme (Alt+T)"><i class="_icon"><i class="isvg">
@@ -31,19 +32,22 @@
         </header>
         <nav class="_nav">
           <div class="_layout">
-            <div>
 <a href="home.html">Home</a>
 <a href="page.html">Page</a>
 <a href="demo-old.html">Old</a>
 <a href="demo-new.html">New</a>
-            </div>
           </div>
         </nav>
         <main class="_main">
           <article class="_article _layout">
-            <pre class="_m0">site_url: /core-dev
-home_url: /core-dev/x
-build   : 17.18.3514</pre>
+            <pre class="_m0 _scrollable">// home
+
+site_url : <a class="_no_u" href="/core-dev">/core-dev</a>
+home_url : <a class="_no_u" href="/core-dev/x">/core-dev/x</a>
+version  : 0.0.2
+revision : 30.0.50
+
+google_analytics : {{ site.google_analytics }}</pre>
           </article>
         </main>
         <footer class="_footer">
@@ -51,9 +55,18 @@ build   : 17.18.3514</pre>
           </div>
         </footer>
       </div>
+    </div><!-- custom-body -->
+    <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
-    <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a></div>
-    <script>window.ghost = 'bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/core-dev/assets/themejs/themejs_v2.0.js?v=!{version}"></script><!-- custom-body -->
+    <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
+    <script type="text/javascript" src="/core-dev/assets/themejs/themejs_v2.0.js?v=0.0.2"></script>
+    <script async="async" src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
+    <script>
+      window.dataLayer=window.dataLayer||[];
+      function gtag(){window.dataLayer.push(arguments);}
+      gtag('js',new Date());
+      gtag('config','{{ site.google_analytics }}');
+      
+    </script>
   </body>
 </html>
