--- a/x/index.html
+++ b/x/index.html
@@ -3,7 +3,7 @@
   <!-- page.layout : pug/core -->
   <head>
     <meta charset="utf-8"/><!-- Begin Jekyll SEO tag v2.8.0 -->
-    <title>Index | Core Development</title><!-- End Jekyll SEO tag -->
+    <title>Index | CoreDev</title><!-- End Jekyll SEO tag -->
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
@@ -45,9 +45,10 @@
 site_url : <a class="_no_u" href="/core-dev">/core-dev</a>
 home_url : <a class="_no_u" href="/core-dev/x">/core-dev/x</a>
 version  : 0.0.2
-revision : 30.0.50
+revision : 30.0.48
 
-google_analytics : {{ site.google_analytics }}</pre>
+google_analytics     : {{ site.google_analytics }}
+cloudflare_analytics : {{ site.cloudflare_analytics }}</pre>
           </article>
         </main>
         <footer class="_footer">
