fix thumbnail and description

--- a/x/index.html
+++ b/x/index.html
@@ -45,10 +45,10 @@
 site_url : <a class="_no_u" href="/core-dev">/core-dev</a>
 home_url : <a class="_no_u" href="/core-dev/x">/core-dev/x</a>
 version  : 0.0.2
-revision : 30.0.48
+revision : 30.1.60
 
-google_analytics     : {{ site.google_analytics }}
-cloudflare_analytics : {{ site.cloudflare_analytics }}</pre>
+google_analytics     : (undefined)
+cloudflare_analytics : (undefined)</pre>
           </article>
         </main>
         <footer class="_footer">
@@ -61,12 +61,12 @@ cloudflare_analytics : {{ site.cloudflare_analytics }}</pre>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
     <script type="text/javascript" src="/core-dev/assets/themejs/themejs_v2.0.js?v=0.0.2"></script>
-    <script async="async" src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
+    <script async="async" src="https://www.googletagmanager.com/gtag/js?id=undefined"></script>
     <script>
       window.dataLayer=window.dataLayer||[];
       function gtag(){window.dataLayer.push(arguments);}
       gtag('js',new Date());
-      gtag('config','{{ site.google_analytics }}');
+      gtag('config','');
       
     </script>
   </body>
