--- a/x/home.html
+++ b/x/home.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html class="_core_layout" lang="en-US"><!-- page.path   : index.html -->
+<html class="_core_layout" lang="en-US"><!-- page.path   : home.html -->
   <!-- page.layout : pug/core -->
   <head>
     <meta charset="utf-8"/><!-- Begin Jekyll SEO tag v2.8.0 -->
-    <title>Index | CoreDev</title><!-- End Jekyll SEO tag -->
+    <title>Home | CoreDev</title><!-- End Jekyll SEO tag -->
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
@@ -18,7 +18,7 @@
           <div class="_layout">
             <div class="_flex">
               <div class="_fill">
-                <div class="_logo"><span class="_pointer">CoreDev</span>
+                <div class="_logo"><a href="/core-dev/x">CoreDev</a>
                 </div>
               </div>
               <div class="_fit">
@@ -32,21 +32,10 @@
         </header>
         <nav class="_nav">
           <div class="_layout">
-<a href="home.html">Home</a>
-<a href="page.html">Page</a>
-<a href="demo-old.html">Old</a>
-<a href="demo-new.html">New</a>
           </div>
         </nav>
         <main class="_main">
           <article class="_article _layout">
-            <pre class="_m0 _scrollable">site_url : <a class="_no_u" href="/core-dev">/core-dev</a>
-home_url : <a class="_no_u" href="/core-dev/x">/core-dev/x</a>
-version  : 0.0.2
-revision : 31.0.76
-
-google_analytics     : (undefined)
-cloudflare_analytics : (undefined)</pre>
           </article>
         </main>
         <footer class="_footer">
