--- a/go/index.html
+++ b/go/index.html
@@ -32,25 +32,27 @@
         </header>
         <nav class="_nav">
           <div class="_layout">
+            <div> 
 <a href="home.html">Home</a>
 <a href="page.html">Page</a>
 <a href="demo-old.html">Old</a>
 <a href="demo-new.html">New</a>
+            </div>
           </div>
         </nav>
         <main class="_main">
-          <article class="_article _layout">
-            <pre class="_m0 _scrollable">site_url : <a class="_no_u" href="/core-dev">/core-dev</a>
-home_url : <a class="_no_u" href="/core-dev/x">/core-dev/x</a>
+          <article class="_article _layout"><code>// Developing style for Core</code>
+            <pre class="_scrollable">site_url : <a class="_no_u" href="/core-dev">/core-dev</a>
+home_url : <a class="_no_u" href="/core-dev/go">/core-dev/go</a>
 version  : 0.0.2
-revision : 31.0.76
-
+revision : 32.9.42
+ghost                : bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv
 google_analytics     : (undefined)
 cloudflare_analytics : (undefined)</pre>
           </article>
         </main>
         <footer class="_footer">
-          <div class="_layout">
+          <div class="_layout"><code>// by Techie Joe 2025</code>
           </div>
         </footer>
       </div>
