--- a/go/home.html
+++ b/go/home.html
@@ -18,7 +18,7 @@
           <div class="_layout">
             <div class="_flex">
               <div class="_fill">
-                <div class="_logo"><a href="/core-dev/x">CoreDev</a>
+                <div class="_logo"><a href="/core-dev/go">CoreDev</a>
                 </div>
               </div>
               <div class="_fit">
