--- a/go/core/index.html
+++ b/go/core/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html class="_core_layout" lang="en-US"><!-- page.path   : index.html -->
+<html class="_core_layout" lang="en-US"><!-- page.path   : core/index.html -->
   <!-- page.layout : pug/core -->
   <head>
     <meta charset="utf-8"/><!-- Begin Jekyll SEO tag v2.8.0 -->
-    <title>Index | CoreDev</title><!-- End Jekyll SEO tag -->
+    <title>Core | CoreDev</title><!-- End Jekyll SEO tag -->
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
@@ -18,7 +18,7 @@
           <div class="_layout">
             <div class="_flex">
               <div class="_fill">
-                <div class="_logo"><span class="_pointer">CoreDev</span>
+                <div class="_logo"><a href="/core-dev/go">CoreDev</a>
                 </div>
               </div>
               <div class="_fit">
@@ -33,21 +33,18 @@
         <nav class="_nav">
           <div class="_layout">
 <a href="/core-dev/go/core/">Core</a>
+<a href="/core-dev/go/core/home.html">Home</a>
+<a href="/core-dev/go/core/page.html">Page</a>
+<a href="/core-dev/go/core/demo.html">Demo</a>
+<a href="/core-dev/go/core/legacy.html">Legacy</a>
           </div>
         </nav>
         <main class="_main">
-          <article class="_article _layout"><code>// Index</code>
-            <pre class="_scrollable">site_url : <a class="_no_u" href="/core-dev">/core-dev</a>
-home_url : <a class="_no_u" href="/core-dev/go">/core-dev/go</a>
-version  : 0.0.2.4556
-revision : 33.11.4556
-ghost                : bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv
-google_analytics     : (undefined)
-cloudflare_analytics : (undefined)</pre>
+          <article class="_article _layout"><code>// content for : Core</code>
           </article>
         </main>
         <footer class="_footer">
-          <div class="_layout"><code>// by Techie Joe 2025</code>
+          <div class="_layout"><code>// footer</code>
           </div>
         </footer>
       </div>
