--- a/go/core/page.html
+++ b/go/core/page.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html class="_core_layout" lang="en-US"><!-- page.path   : home.html -->
+<html class="_core_layout" lang="en-US"><!-- page.path   : page.html -->
   <!-- page.layout : pug/core -->
   <head>
     <meta charset="utf-8"/><!-- Begin Jekyll SEO tag v2.8.0 -->
-    <title>Home | CoreDev</title><!-- End Jekyll SEO tag -->
+    <title>Page | CoreDev</title><!-- End Jekyll SEO tag -->
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/core-dev/assets/core/css/style.css?v=0.0.2"/><!-- custom-head -->
+    <link id="_style" rel="stylesheet" href="/core-dev/assets/core/css/style.css?v=0.0.2.4557"/><!-- custom-head -->
     <!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
@@ -32,14 +32,19 @@
         </header>
         <nav class="_nav">
           <div class="_layout">
+<a href="/core-dev/go/core/">Core</a>
+<a href="/core-dev/go/core/home.html">Home</a>
+<a href="/core-dev/go/core/page.html">Page</a>
+<a href="/core-dev/go/core/demo.html">Demo</a>
+<a href="/core-dev/go/core/legacy.html">Legacy</a>
           </div>
         </nav>
         <main class="_main">
-          <article class="_article _layout">
+          <article class="_article _layout"><code>// content for : Page</code>
           </article>
         </main>
         <footer class="_footer">
-          <div class="_layout">
+          <div class="_layout"><code>// footer</code>
           </div>
         </footer>
       </div>
@@ -47,6 +52,6 @@
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/core-dev/assets/themejs/themejs_v2.0.js?v=0.0.2"></script>
+    <script type="text/javascript" src="/core-dev/assets/themejs/themejs_v2.0.js?v=0.0.2.4557"></script>
   </body>
 </html>
