--- a/core/home.html
+++ b/core/home.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html class="_core_layout" lang="en-US"><!-- page.path   : core/index.html -->
+<html class="_core_layout" lang="en-US"><!-- page.path   : home.html -->
   <!-- page.layout : pug/core -->
   <head>
     <meta charset="utf-8"/><!-- Begin Jekyll SEO tag v2.8.0 -->
-    <title>Core | CoreDev</title><!-- End Jekyll SEO tag -->
+    <title>Home | CoreDev</title><!-- End Jekyll SEO tag -->
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/core-dev/assets/core/css/style.css?v=0.0.2.401"/><!-- custom-head -->
+    <link id="_style" rel="stylesheet" href="/core-dev/assets/core/css/style.css?v=0.0.2.528"/><!-- custom-head -->
     <!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
@@ -40,7 +40,7 @@
           </div>
         </nav>
         <main class="_main">
-          <article class="_article _layout"><code>// content for : Core</code>
+          <article class="_article _layout"><code>// content for : Home</code>
           </article>
         </main>
         <footer class="_footer">
@@ -52,6 +52,6 @@
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/core-dev/assets/themejs/themejs_v2.0.js?v=0.0.2.401"></script>
+    <script type="text/javascript" src="/core-dev/assets/themejs/themejs_v2.0.js?v=0.0.2.528"></script>
   </body>
 </html>
