--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html class="_core_layout" lang="en-US"><!-- page.path   : core/index.html -->
+<html class="_core_layout" lang="en-US"><!-- page.path   : index.html -->
   <!-- page.layout : pug/core -->
   <head>
     <meta charset="utf-8"/><!-- Begin Jekyll SEO tag v2.8.0 -->
-    <title>Core | CoreDev</title><!-- End Jekyll SEO tag -->
+    <title>Index | CoreDev</title><!-- End Jekyll SEO tag -->
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/core-dev/assets/core/css/style.css?v=0.0.2.401"/><!-- custom-head -->
+    <link id="_style" rel="stylesheet" href="/core-dev/assets/core/css/style.css?v=0.0.2.528"/><!-- custom-head -->
     <!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
@@ -18,7 +18,7 @@
           <div class="_layout">
             <div class="_flex">
               <div class="_fill">
-                <div class="_logo"><a href="/core-dev/go">CoreDev</a>
+                <div class="_logo"><span class="_pointer">CoreDev</span>
                 </div>
               </div>
               <div class="_fit">
@@ -33,18 +33,21 @@
         <nav class="_nav">
           <div class="_layout">
 <a href="/core-dev/go/core/">Core</a>
-<a href="/core-dev/go/core/home.html">Home</a>
-<a href="/core-dev/go/core/page.html">Page</a>
-<a href="/core-dev/go/core/demo.html">Demo</a>
-<a href="/core-dev/go/core/legacy.html">Legacy</a>
           </div>
         </nav>
         <main class="_main">
-          <article class="_article _layout"><code>// content for : Core</code>
+          <article class="_article _layout"><code>// Index</code>
+            <pre class="_scrollable">site_url : <a class="_no_u" href="/core-dev">/core-dev</a>
+home_url : <a class="_no_u" href="/core-dev/go">/core-dev/go</a>
+version  : 0.0.2.528
+revision : 33.12.528
+ghost                : bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv
+google_analytics     : (undefined)
+cloudflare_analytics : (undefined)</pre>
           </article>
         </main>
         <footer class="_footer">
-          <div class="_layout"><code>// footer</code>
+          <div class="_layout"><code>// by Techie Joe 2025</code>
           </div>
         </footer>
       </div>
@@ -52,6 +55,6 @@
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/core-dev/assets/themejs/themejs_v2.0.js?v=0.0.2.401"></script>
+    <script type="text/javascript" src="/core-dev/assets/themejs/themejs_v2.0.js?v=0.0.2.528"></script>
   </body>
 </html>
