--- a/go/index.html
+++ b/go/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/core-dev/assets/core/css/style.css?v=0.0.2.401"/><!-- custom-head -->
+    <link id="_style" rel="stylesheet" href="/core-dev/assets/core/css/style.css?v=0.0.2.4027"/><!-- custom-head -->
     <!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
@@ -36,11 +36,11 @@
           </div>
         </nav>
         <main class="_main">
-          <article class="_article _layout"><code>// Index</code>
+          <article class="_article _layout"><code>// This project is made to test and develop the Core.</code>
             <pre class="_scrollable">site_url : <a class="_no_u" href="/core-dev">/core-dev</a>
 home_url : <a class="_no_u" href="/core-dev/go">/core-dev/go</a>
-version  : 0.0.2.401
-revision : 33.12.401
+version  : 0.0.2.4027
+revision : 33.17.4027
 ghost                : bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv
 google_analytics     : (undefined)
 cloudflare_analytics : (undefined)</pre>
@@ -55,6 +55,6 @@ cloudflare_analytics : (undefined)</pre>
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/core-dev/assets/themejs/themejs_v2.0.js?v=0.0.2.401"></script>
+    <script type="text/javascript" src="/core-dev/assets/themejs/themejs_v2.0.js?v=0.0.2.4027"></script>
   </body>
 </html>
