--- a/go/core/demo_.html
+++ b/go/core/demo_.html
@@ -1,8 +1,8 @@
-<p class="hero">Hero statement with <span class="text-red">a red text</span> is dramatic</p>
+<p class="hero">Hero statement with <span class="text-red">a red text</span> would be dramatic</p>
 
 <h2 id="better-control-over-contents">Better control over contents</h2>
 
-<p><img src="https://techie-joe.github.io/core/images/299-400x300.jpg" alt="Featured image" class="float-right ml-4 mb-4" /></p>
+<p><img src="https://techie-joe.github.io/core/images/299-400x300.jpg" alt="Featured image" class="float-right ml mb" width="400" height="300" /></p>
 
 <p class="text-justify big-first">Writing an article can be exciting when you can add few things here and there. The <code class="language-plaintext highlighter-rouge">big-first</code> class will enlarge the first letter of a paragraph. While <code class="language-plaintext highlighter-rouge">text-justify</code> neatly aligns your text to its container. You can also include images and <a href="#">hyperlinks</a> to make things more engaging.</p>
 
@@ -16,12 +16,6 @@ Indentation gives a sense of order and clarity, making an article easier to read
 <blockquote>
   <p>Take a look at <a href="https://techie-joe.github.io/core/legacy" target="_blank">the legacy</a> for the classic demo page.</p>
 </blockquote>
-
-<h3 id="theme-switch">Theme switch</h3>
-
-<p>Click the following button to switch between <strong><em>light</em></strong> and <strong><em>dark</em></strong>.</p>
-
-<p><a href="#" onclick="event.preventDefault();window.base?.theme.change()" class="_bt -l -flat" title="Change theme (Ctrl+Alt+T)">Change theme (Ctrl+Alt+T)</a></p>
 
 <h3 id="horizontal-rule">Horizontal rule</h3>
 
@@ -69,7 +63,8 @@ or add some <code class="language-plaintext highlighter-rouge">code</code>.</p>
 <b class="text-purple">purple</b>
 <b class="text-pending">pending</b>
 <b class="text-orange">orange</b>
-<b class="text-orange-light">orange-light</b>.</p>
+<b class="text-orange-light">orange-light</b>
+    .</p>
   </li>
 </ul>
 
@@ -87,7 +82,7 @@ or add some <code class="language-plaintext highlighter-rouge">code</code>.</p>
 
 <h3 id="large-image">Large image</h3>
 
-<p><img src="https://techie-joe.github.io/core/images/299-1024x368.jpg" alt="Large image" class="width-full centered" /></p>
+<p><img src="https://techie-joe.github.io/core/images/299-1024x368.jpg" alt="Large image" class="full-width centered" /></p>
 
 <blockquote class="text-small mt-0">
   <p>Images for this demo came from <a href="https://picsum.photos/" target="_blank">picsum.photos</a>.</p>
@@ -192,9 +187,9 @@ or add some <code class="language-plaintext highlighter-rouge">code</code>.</p>
 
 <h3 id="text-link">Text link</h3>
 
-<p>You can link to <a href="/core-lab/posts" title="View posts">posts</a> and <a href="/core-lab/pages" title="View pages">pages</a>.</p>
+<p>You can link to <a href="./posts" title="View posts">posts</a> and <a href="./pages" title="View pages">pages</a>.</p>
 
-<p>If you link to a missing page, you’ll see <a href="/core-lab/404" title="The error page">an error page</a>.</p>
+<p>If you link to a missing page, you’ll see <a href="./404" title="The error page">an error page</a>.</p>
 
 <h3 id="button-link">Button link</h3>
 
@@ -269,7 +264,7 @@ Long, single-line `code blocks` should not wrap. They should remain on a single 
 <details class="bg-secondary box">
 <summary>Style them with box. <i>(click for more)</i></summary>
 <div class="px-2 py">
-<p class="text-justify">But beware, this block has a mischievous streak: it expands with a dramatic flourish like curtains on opening night, then folds back up as if nothing ever happened, gaslighting your memory of what you just saw. Authors toss long-winded explanations, secret Easter eggs, or poorly formatted cat ASCII art inside it, knowing only the brave will click. In its most chaotic form, the details block nests within itself, collapsing collapsibles within collapsibles until the reader spirals into an abyss of disclosure toggles, wondering whether the summary is summary enough to summarize the summaries.</p>
+<p class="text-grey text-justify">But beware, this block has a mischievous streak: it expands with a dramatic flourish like curtains on opening night, then folds back up as if nothing ever happened, gaslighting your memory of what you just saw. Authors toss long-winded explanations, secret Easter eggs, or poorly formatted cat ASCII art inside it, knowing only the brave will click. In its most chaotic form, the details block nests within itself, collapsing collapsibles within collapsibles until the reader spirals into an abyss of disclosure toggles, wondering whether the summary is summary enough to summarize the summaries.</p>
 </div>
 </details>
 
