--- a/go/core/demo.html
+++ b/go/core/demo.html
@@ -8,9 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/core-dev/assets/core/css/style.css?v=0.0.2.4027"/><!-- custom-head -->
+    <link id="_style" rel="stylesheet" href="/core-dev/assets/core/css/style.css?v=0.0.2.4246"/><!-- custom-head -->
     <!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
-    <style>._main { border: 1px solid #8888 }</style>
   </head>
   <body>
     <div class="_views">
@@ -32,7 +31,7 @@
           </div>
         </header>
         <nav class="_nav">
-          <div class="_layout">
+          <div class="_layout _960">
 <a href="/core-dev/go/core/">Core</a>
 <i class="_icon"><i class="isvg">
                 <svg viewBox="0 0 24 24">
@@ -45,11 +44,11 @@
           </div>
         </nav>
         <main class="_main">
-          <article class="_article _layout"><p class="hero">Hero statement with <span class="text-red">a red text</span> is dramatic</p>
+          <article class="_article _layout _960"><p class="hero">Hero statement with <span class="text-red">a red text</span> would be dramatic</p>
 
 <h2 id="better-control-over-contents">Better control over contents</h2>
 
-<p><img src="https://techie-joe.github.io/core/images/299-400x300.jpg" alt="Featured image" class="float-right ml-4 mb-4" /></p>
+<p><img src="https://techie-joe.github.io/core/images/299-400x300.jpg" alt="Featured image" class="float-right ml mb" width="400" height="300" /></p>
 
 <p class="text-justify big-first">Writing an article can be exciting when you can add few things here and there. The <code class="language-plaintext highlighter-rouge">big-first</code> class will enlarge the first letter of a paragraph. While <code class="language-plaintext highlighter-rouge">text-justify</code> neatly aligns your text to its container. You can also include images and <a href="#">hyperlinks</a> to make things more engaging.</p>
 
@@ -63,12 +62,6 @@ Indentation gives a sense of order and clarity, making an article easier to read
 <blockquote>
   <p>Take a look at <a href="https://techie-joe.github.io/core/legacy" target="_blank">the legacy</a> for the classic demo page.</p>
 </blockquote>
-
-<h3 id="theme-switch">Theme switch</h3>
-
-<p>Click the following button to switch between <strong><em>light</em></strong> and <strong><em>dark</em></strong>.</p>
-
-<p><a href="#" onclick="event.preventDefault();window.base?.theme.change()" class="_bt -l -flat" title="Change theme (Ctrl+Alt+T)">Change theme (Ctrl+Alt+T)</a></p>
 
 <h3 id="horizontal-rule">Horizontal rule</h3>
 
@@ -116,7 +109,8 @@ or add some <code class="language-plaintext highlighter-rouge">code</code>.</p>
 <b class="text-purple">purple</b>
 <b class="text-pending">pending</b>
 <b class="text-orange">orange</b>
-<b class="text-orange-light">orange-light</b>.</p>
+<b class="text-orange-light">orange-light</b>
+    .</p>
   </li>
 </ul>
 
@@ -134,7 +128,7 @@ or add some <code class="language-plaintext highlighter-rouge">code</code>.</p>
 
 <h3 id="large-image">Large image</h3>
 
-<p><img src="https://techie-joe.github.io/core/images/299-1024x368.jpg" alt="Large image" class="width-full centered" /></p>
+<p><img src="https://techie-joe.github.io/core/images/299-1024x368.jpg" alt="Large image" class="full-width centered" /></p>
 
 <blockquote class="text-small mt-0">
   <p>Images for this demo came from <a href="https://picsum.photos/" target="_blank">picsum.photos</a>.</p>
@@ -239,9 +233,9 @@ or add some <code class="language-plaintext highlighter-rouge">code</code>.</p>
 
 <h3 id="text-link">Text link</h3>
 
-<p>You can link to <a href="/core-lab/posts" title="View posts">posts</a> and <a href="/core-lab/pages" title="View pages">pages</a>.</p>
+<p>You can link to <a href="./posts" title="View posts">posts</a> and <a href="./pages" title="View pages">pages</a>.</p>
 
-<p>If you link to a missing page, you’ll see <a href="/core-lab/404" title="The error page">an error page</a>.</p>
+<p>If you link to a missing page, you’ll see <a href="./404" title="The error page">an error page</a>.</p>
 
 <h3 id="button-link">Button link</h3>
 
@@ -316,7 +310,7 @@ Long, single-line `code blocks` should not wrap. They should remain on a single 
 <details class="bg-secondary box">
 <summary>Style them with box. <i>(click for more)</i></summary>
 <div class="px-2 py">
-<p class="text-justify">But beware, this block has a mischievous streak: it expands with a dramatic flourish like curtains on opening night, then folds back up as if nothing ever happened, gaslighting your memory of what you just saw. Authors toss long-winded explanations, secret Easter eggs, or poorly formatted cat ASCII art inside it, knowing only the brave will click. In its most chaotic form, the details block nests within itself, collapsing collapsibles within collapsibles until the reader spirals into an abyss of disclosure toggles, wondering whether the summary is summary enough to summarize the summaries.</p>
+<p class="text-grey text-justify">But beware, this block has a mischievous streak: it expands with a dramatic flourish like curtains on opening night, then folds back up as if nothing ever happened, gaslighting your memory of what you just saw. Authors toss long-winded explanations, secret Easter eggs, or poorly formatted cat ASCII art inside it, knowing only the brave will click. In its most chaotic form, the details block nests within itself, collapsing collapsibles within collapsibles until the reader spirals into an abyss of disclosure toggles, wondering whether the summary is summary enough to summarize the summaries.</p>
 </div>
 </details>
 
@@ -492,7 +486,7 @@ Every new line in footnote should be prefixed with 2 space or 4 space indentatio
           </article>
         </main>
         <footer class="_footer">
-          <div class="_layout"><code>// by Techie Joe 2025</code>
+          <div class="_layout _960"><code>// by Techie Joe 2025</code>
           </div>
         </footer>
       </div>
@@ -500,6 +494,6 @@ Every new line in footnote should be prefixed with 2 space or 4 space indentatio
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/core-dev/assets/themejs/themejs_v2.0.js?v=0.0.2.4027"></script>
+    <script type="text/javascript" src="/core-dev/assets/themejs/themejs_v2.0.js?v=0.0.2.4246"></script>
   </body>
 </html>
