--- a/go/core/index.html
+++ b/go/core/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/core-dev/assets/core/css/style.css?v=0.0.2.3850"/><!-- custom-head -->
+    <link id="_style" rel="stylesheet" href="/core-dev/assets/core/css/style.css?v=0.0.2.4246"/><!-- custom-head -->
     <!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
@@ -31,7 +31,7 @@
           </div>
         </header>
         <nav class="_nav">
-          <div class="_layout">
+          <div class="_layout _960">
 <a href="/core-dev/go/core/">Core</a>
 <i class="_icon"><i class="isvg">
                 <svg viewBox="0 0 24 24">
@@ -44,11 +44,11 @@
           </div>
         </nav>
         <main class="_main">
-          <article class="_article _layout"><code>// content for : Core</code>
+          <article class="_article _layout _960"><code>// content for : Core</code>
           </article>
         </main>
         <footer class="_footer">
-          <div class="_layout"><code>// footer</code>
+          <div class="_layout _960"><code>// by Techie Joe 2025</code>
           </div>
         </footer>
       </div>
@@ -56,6 +56,6 @@
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/core-dev/assets/themejs/themejs_v2.0.js?v=0.0.2.3850"></script>
+    <script type="text/javascript" src="/core-dev/assets/themejs/themejs_v2.0.js?v=0.0.2.4246"></script>
   </body>
 </html>
