--- a/go/core/legacy.html
+++ b/go/core/legacy.html
@@ -8,9 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/core-dev/assets/core/css/style.css?v=0.0.2.3850"/><!-- custom-head -->
+    <link id="_style" rel="stylesheet" href="/core-dev/assets/core/css/style.css?v=0.0.2.4247"/><!-- custom-head -->
     <!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
-    <style>._main { border: 1px solid #8888 }</style>
   </head>
   <body>
     <div class="_views">
@@ -32,7 +31,7 @@
           </div>
         </header>
         <nav class="_nav">
-          <div class="_layout">
+          <div class="_layout _960">
 <a href="/core-dev/go/core/">Core</a>
 <i class="_icon"><i class="isvg">
                 <svg viewBox="0 0 24 24">
@@ -45,7 +44,7 @@
           </div>
         </nav>
         <main class="_main">
-          <article class="_article _layout"><p>Text can be <strong>bold</strong>, <em>italic</em>, or <del>strikethrough</del>.</p>
+          <article class="_article _layout _960"><p>Text can be <strong>bold</strong>, <em>italic</em>, or <del>strikethrough</del>.</p>
 
 <p><a href="./">Link to another page</a>.</p>
 
@@ -211,7 +210,7 @@
           </article>
         </main>
         <footer class="_footer">
-          <div class="_layout"><code>// by Techie Joe 2025</code>
+          <div class="_layout _960"><code>// by Techie Joe 2025</code>
           </div>
         </footer>
       </div>
@@ -219,6 +218,6 @@
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/core-dev/assets/themejs/themejs_v2.0.js?v=0.0.2.3850"></script>
+    <script type="text/javascript" src="/core-dev/assets/themejs/themejs_v2.0.js?v=0.0.2.4247"></script>
   </body>
 </html>
