update core style

--- a/go/core/demo_.html
+++ b/go/core/demo_.html
@@ -46,7 +46,8 @@ or <strong><em>both</em></strong>.</p>
 or add some <code class="language-plaintext highlighter-rouge">code</code>.</p>
   </li>
   <li>
-    <p>Use HTML to include
+    <p>Use HTML to
+<u>underline</u>,
 <abbr title="Abbreviation">abbr</abbr>,
 <samp>samp</samp>, and
 <mark>mark</mark>.</p>
