--- a/_pugs/go/core/demo_.html
+++ b/_pugs/go/core/demo_.html
@@ -11,7 +11,7 @@
 <p class="text-justify">Use the <code class="language-plaintext highlighter-rouge">indent</code> class to nudge the first line of a paragraph.
 Indentation gives a sense of order and clarity, making an article easier to read.</p>
 
-<p class="indent text-justify text-grey"><strong>You’ll notice some gibberish text in this demo.</strong> It’s simply a placeholder content, added to give you a sense of how the layout and styling will look. The text itself doesn’t carry any meaning — it’s just there to fill space and make the design feel more complete. Each time and the channel a different story all with different story, to a pleasure the color of television. A story to honor the color of television the more or less was burnt, in such cases it varies person to another. This happened to the color of television as it differs to another different story.</p>
+<p class="indent text-justify text-grey"><strong>You'll notice some gibberish text in this demo.</strong> It's simply a placeholder content, added to give you a sense of how the layout and styling will look. The text itself doesn't carry any meaning — it's just there to fill space and make the design feel more complete. Each time and the channel a different story all with different story, to a pleasure the color of television. A story to honor the color of television the more or less was burnt, in such cases it varies person to another. This happened to the color of television as it differs to another different story.</p>
 
 <blockquote>
   <p>Take a look at <a href="https://techie-joe.github.io/core/legacy" target="_blank">the legacy</a> for the classic demo page.</p>
@@ -19,13 +19,13 @@ Indentation gives a sense of order and clarity, making an article easier to read
 
 <h3 id="horizontal-rule">Horizontal rule</h3>
 
-<p>There’s a horizontal rule below this line.</p>
+<p>There's a horizontal rule below this line.</p>
 
 <hr />
 
 <h3 id="invisible-comments">Invisible comments</h3>
 
-<p>There’s a comment block below this line.</p>
+<p>There's a comment block below this line.</p>
 
 <!-- This HTML comment will not appear in the rendered Markdown -->
 
@@ -46,7 +46,7 @@ or <strong><em>both</em></strong>.</p>
 or add some <code class="language-plaintext highlighter-rouge">code</code>.</p>
   </li>
   <li>
-    <p>Use HTML to
+    <p>Use HTML to render
 <u>underline</u>,
 <abbr title="Abbreviation">abbr</abbr>,
 <samp>samp</samp>, and
@@ -58,10 +58,10 @@ or add some <code class="language-plaintext highlighter-rouge">code</code>.</p>
 <b class="text-secondary">secondary</b>
 <b class="text-gray">gray</b>
 <b class="text-slategray">slategray</b>
-<b class="text-red">red</b>
 <b class="text-blue">blue</b>
 <b class="text-green">green</b>
 <b class="text-purple">purple</b>
+<b class="text-red">red</b>
 <b class="text-pending">pending</b>
 <b class="text-orange">orange</b>
 <b class="text-orange-light">orange-light</b>
@@ -93,23 +93,23 @@ or add some <code class="language-plaintext highlighter-rouge">code</code>.</p>
 
 <h1 id="the-legendary-h1">The Legendary H1</h1>
 
-<p>Behold, the almighty H1, the king of headings! If a webpage was a burger, H1 would be the top bun — soft, golden, and holding everything together. But don’t overuse it. One king per kingdom. Two kings? Chaos. Three kings? That’s a Shakespeare play.</p>
+<p>Behold, the almighty H1, the king of headings! If a webpage was a burger, H1 would be the top bun — soft, golden, and holding everything together. But don't overuse it. One king per kingdom. Two kings? Chaos. Three kings? That's a Shakespeare play.</p>
 
 <h2 id="the-shy-h2">The Shy H2</h2>
 
-<p>Ah, the H2. Not too loud, not too small. It’s like the middle child of headings: always trying, never crying. H2 organizes sections, but secretly dreams of being an H1 someday. Don’t tell it the truth. Let it dream.</p>
+<p>Ah, the H2. Not too loud, not too small. It's like the middle child of headings: always trying, never crying. H2 organizes sections, but secretly dreams of being an H1 someday. Don't tell it the truth. Let it dream.</p>
 
 <h3 id="mysterious-h3">Mysterious H3</h3>
 
-<p>The H3 is like that friend who wears sunglasses indoors. Mysterious. Cool. A bit unnecessary sometimes, but when used right — chef’s kiss! H3 loves details and subtopics. But if you go too deep, suddenly you’re in H6 territory, and nobody reads that far.</p>
+<p>The H3 is like that friend who wears sunglasses indoors. Mysterious. Cool. A bit unnecessary sometimes, but when used right — chef's kiss! H3 loves details and subtopics. But if you go too deep, suddenly you're in H6 territory, and nobody reads that far.</p>
 
 <h4 id="forgotten-h4">Forgotten H4</h4>
 
-<p>H4 is like socks at Christmas. Technically useful, but no one really cheers for it. You’ll use it if you have to, like adding extra layers to a report nobody asked for. Poor H4. Always invited, never remembered.</p>
+<p>H4 is like socks at Christmas. Technically useful, but no one really cheers for it. You'll use it if you have to, like adding extra layers to a report nobody asked for. Poor H4. Always invited, never remembered.</p>
 
 <h6 id="tiny-h5">Tiny H5</h6>
 
-<p>H5 is that tiny notebook you bought to look organized but never actually use. It’s small, it’s cute, it’s there — but honestly, body text is almost the same size, so why bother? H5 knows its fate but accepts it gracefully.</p>
+<p>H5 is that tiny notebook you bought to look organized but never actually use. It's small, it's cute, it's there — but honestly, body text is almost the same size, so why bother? H5 knows its fate but accepts it gracefully.</p>
 
 <h6 id="ghostly-h6">Ghostly H6</h6>
 
@@ -190,12 +190,12 @@ or add some <code class="language-plaintext highlighter-rouge">code</code>.</p>
 
 <p>You can link to <a href="./posts" title="View posts">posts</a> and <a href="./pages" title="View pages">pages</a>.</p>
 
-<p>If you link to a missing page, you’ll see <a href="./404" title="The error page">an error page</a>.</p>
+<p>If you link to a missing page, you'll see <a href="./404" title="The error page">an error page</a>.</p>
 
 <h3 id="button-link">Button link</h3>
 
-<p><a href="#" class="_bt -l -blue">Primary Button Link</a>
-<a href="#" class="_bt -l -flat">Secondary Button Link</a></p>
+<p><a href="#" class="button -l -primary">Primary Button Link</a>
+<a href="#" class="button -l -flat">Secondary Button Link</a></p>
 
 <h3 id="footnote-link">Footnote link</h3>
 
@@ -302,7 +302,7 @@ Long, single-line `code blocks` should not wrap. They should remain on a single 
 
 <h3 id="full-table">Full table</h3>
 
-<table class="full">
+<table class="full-width">
   <thead>
     <tr>
       <th style="text-align: left">Left</th>
@@ -336,7 +336,7 @@ Long, single-line `code blocks` should not wrap. They should remain on a single 
 
 <h3 id="simple-table">Simple table</h3>
 
-<table class="full simple" style="max-width:300px">
+<table class="full-width simple" style="max-width:300px">
   <thead>
     <tr>
       <th style="text-align: left">Name</th>
@@ -361,7 +361,7 @@ Long, single-line `code blocks` should not wrap. They should remain on a single 
 
 <h3 id="borderless-table">Borderless table</h3>
 
-<table class="full borderless" style="max-width:300px">
+<table class="full-width borderless" style="max-width:300px">
   <thead>
     <tr>
       <th style="text-align: left">Items</th>
@@ -392,7 +392,7 @@ Long, single-line `code blocks` should not wrap. They should remain on a single 
 
 <p>You have to use HTML syntax for complex table.</p>
 
-<table class="full" style="max-width:500px">
+<table class="full-width" style="max-width:500px">
 <tr>
     <th class="text-left">Label</th>
     <th class="text-center">Status</th>
