--- a/primer/index.html
+++ b/primer/index.html
@@ -3,13 +3,13 @@
   <!-- page.layout : pugs/primer -->
   <head>
     <meta charset="utf-8"/><!-- Begin Jekyll SEO tag v2.8.0 -->
-    <title>Core | CoreDev</title><!-- End Jekyll SEO tag -->
+    <title>Core | Dove</title><!-- End Jekyll SEO tag -->
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/core-dev/assets/core/css/style.css?v=0.0.2.5415"/>
-    <link id="_style_primer" rel="stylesheet" href="/core-dev/assets/primer/css/style.css?v=0.0.2.5415"/><!-- custom-head -->
+    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.5853"/>
+    <link id="_style_primer" rel="stylesheet" href="/dove/assets/primer/css/style.css?v=0.0.2.5853"/><!-- custom-head -->
     <!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
@@ -19,22 +19,22 @@
           <header class="_header">
             <div class="_layout">
               <h1>
-                <div class="_logo"><a href="/core-dev">CoreDev</a>
+                <div class="_logo"><a href="/dove">Dove</a>
                 </div>
               </h1>
             </div>
           </header>
           <nav class="_nav">
             <div class="_layout _960">
-<a href="/core-dev/primer/">Primer</a>
+<a href="/dove/primer/">Primer</a>
 <i class="_icon"><i class="isvg">
                   <svg viewBox="0 0 24 24">
                     <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
                   </svg></i></i>
-<a href="/core-dev/primer/home.html">Home</a>
-<a href="/core-dev/primer/page.html">Page</a>
-<a href="/core-dev/primer/legacy.html">Legacy</a>
-<a href="/core-dev/primer/404.html">404</a>
+<a href="/dove/primer/home.html">Home</a>
+<a href="/dove/primer/page.html">Page</a>
+<a href="/dove/primer/legacy.html">Legacy</a>
+<a href="/dove/primer/404.html">404</a>
             </div>
           </nav>
           <main class="_main">
