--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <!-- page.layout : pugs/core -->
   <head>
     <meta charset="utf-8"/><!-- Begin Jekyll SEO tag v2.8.0 -->
-    <title>Index | CoreDev</title><!-- End Jekyll SEO tag -->
+    <title>Index | Dove</title><!-- End Jekyll SEO tag -->
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/core-dev/assets/core/css/style.css?v=0.0.2.5414"/><!-- custom-head -->
+    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.5852"/><!-- custom-head -->
     <!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
@@ -18,7 +18,7 @@
           <div class="_layout">
             <div class="flex">
               <div class="fill">
-                <div class="_logo"><span class="_pointer">CoreDev</span>
+                <div class="_logo"><span class="_pointer">Dove</span>
                 </div>
               </div>
               <div class="fit">
@@ -36,59 +36,59 @@
           </div>
         </nav>
         <main class="_main">
-          <article class="_article _layout _960"><code>// This project is made to test and develop the Core.</code>
-            <pre class="scrollable">site_url : <a class="_no_u" href="/core-dev">/core-dev</a>
-home_url : <a class="_no_u" href="/core-dev">/core-dev</a>
-version  : 0.0.2.5414
-revision : 33.15.5414
+          <article class="_article _layout _960"><code>// Dove is a theme development project.</code>
+            <pre class="scrollable">site_url : <a class="_no_u" href="/dove">/dove</a>
+home_url : <a class="_no_u" href="/dove">/dove</a>
+version  : 0.0.2.5852
+revision : 33.9.5852
 ghost                : bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv
 google_analytics     : (undefined)
 cloudflare_analytics : (undefined)</pre><code>// Layouts</code>
             <nav>
               <ul>
                 <li>
-<a href="/core-dev/core/">Core</a>
+<a href="/dove/core/">Core</a>
 <i class="_icon"><i class="isvg">
                       <svg viewBox="0 0 24 24">
                         <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
                       </svg></i></i>
-<a href="/core-dev/core/home.html">Home</a>
-<a href="/core-dev/core/page.html">Page</a>
-<a href="/core-dev/core/legacy.html">Legacy</a>
-<a href="/core-dev/core/404.html">404</a>
+<a href="/dove/core/home.html">Home</a>
+<a href="/dove/core/page.html">Page</a>
+<a href="/dove/core/legacy.html">Legacy</a>
+<a href="/dove/core/404.html">404</a>
                 </li>
                 <li>
-<a href="/core-dev/nova/">Nova</a>
+<a href="/dove/nova/">Nova</a>
 <i class="_icon"><i class="isvg">
                       <svg viewBox="0 0 24 24">
                         <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
                       </svg></i></i>
-<a href="/core-dev/nova/home.html">Home</a>
-<a href="/core-dev/nova/page.html">Page</a>
-<a href="/core-dev/nova/legacy.html">Legacy</a>
-<a href="/core-dev/nova/404.html">404</a>
+<a href="/dove/nova/home.html">Home</a>
+<a href="/dove/nova/page.html">Page</a>
+<a href="/dove/nova/legacy.html">Legacy</a>
+<a href="/dove/nova/404.html">404</a>
                 </li>
                 <li>
-<a href="/core-dev/mallet/">Mallet</a>
+<a href="/dove/mallet/">Mallet</a>
 <i class="_icon"><i class="isvg">
                       <svg viewBox="0 0 24 24">
                         <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
                       </svg></i></i>
-<a href="/core-dev/mallet/home.html">Home</a>
-<a href="/core-dev/mallet/page.html">Page</a>
-<a href="/core-dev/mallet/legacy.html">Legacy</a>
-<a href="/core-dev/mallet/404.html">404</a>
+<a href="/dove/mallet/home.html">Home</a>
+<a href="/dove/mallet/page.html">Page</a>
+<a href="/dove/mallet/legacy.html">Legacy</a>
+<a href="/dove/mallet/404.html">404</a>
                 </li>
                 <li>
-<a href="/core-dev/primer/">Primer</a>
+<a href="/dove/primer/">Primer</a>
 <i class="_icon"><i class="isvg">
                       <svg viewBox="0 0 24 24">
                         <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
                       </svg></i></i>
-<a href="/core-dev/primer/home.html">Home</a>
-<a href="/core-dev/primer/page.html">Page</a>
-<a href="/core-dev/primer/legacy.html">Legacy</a>
-<a href="/core-dev/primer/404.html">404</a>
+<a href="/dove/primer/home.html">Home</a>
+<a href="/dove/primer/page.html">Page</a>
+<a href="/dove/primer/legacy.html">Legacy</a>
+<a href="/dove/primer/404.html">404</a>
                 </li>
               </ul>
             </nav>
@@ -103,6 +103,6 @@ cloudflare_analytics : (undefined)</pre><code>// Layouts</code>
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/core-dev/assets/themejs/themejs_v2.0.js?v=0.0.2.5414"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.5852"></script>
   </body>
 </html>
