--- a/primer/index.html
+++ b/primer/index.html
@@ -1,44 +1,19 @@
 <!DOCTYPE html>
-<html class="_primer_layout" lang="en-US"><!-- page.path   : core/index.html -->
+<html class="_primer_layout" lang="en-US"><!-- page.path   : primer/index.html -->
   <!-- page.layout : pugs/primer -->
   <head>
     <meta charset="utf-8"/><!-- Begin Jekyll SEO tag v2.8.0 -->
-    <title>Core | Dove</title><!-- End Jekyll SEO tag -->
+    <title>Primer | Dove</title><!-- End Jekyll SEO tag -->
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.3444"/>
-    <link id="_style_primer" rel="stylesheet" href="/dove/assets/primer/css/style.css?v=0.0.2.3444"/><!-- custom-head -->
+    <link id="_style_primer" rel="stylesheet" href="/dove/assets/primer/css/style.css?v=0.0.2.2318"/><!-- custom-head -->
     <!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
-    <div class="_views">
-      <div class="_view">
-        <div class="container-lg px-3 my-5">
-          <header class="_header">
-            <div class="_layout markdown-body">
-              <h1>
-                <div class="_logo"><a href="/dove">Dove</a>
-                </div>
-              </h1>
-            </div>
-          </header>
-          <nav class="_nav">
-            <div class="_layout markdown-body">
-<a href="/dove/primer/">Primer</a>
-<i class="_icon"><i class="isvg">
-                  <svg viewBox="0 0 24 24">
-                    <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                  </svg></i></i>
-<a href="/dove/primer/home.html">Home</a>
-<a href="/dove/primer/page.html">Page</a>
-<a href="/dove/primer/legacy.html">Legacy</a>
-<a href="/dove/primer/404.html">404</a>
-            </div>
-          </nav>
-          <main class="_main">
-            <article class="_article _layout markdown-body"><p class="hero">Hero statement with <span class="text-red">a red text</span> would be dramatic</p>
+    <div class="container-lg px-3 my-5 markdown-body">
+      <h1><a href="/dove">Dove</a></h1><p class="hero">Hero statement with <span class="text-red">a red text</span> would be dramatic</p>
 
 <h2 id="better-control-over-contents">Better control over contents</h2>
 
@@ -464,17 +439,12 @@ Every new line in footnote should be prefixed with 2 space or 4 space indentatio
       <p>Named footnotes will still render with numbers instead of the text but allow easier identification and linking. <a href="#fnref:note" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
     </li>
   </ol>
-</div>
-            </article>
-          </main>
-          <footer class="_footer">
-            <div class="_layout markdown-body"><code>// by Techie Joe 2025</code>
-            </div>
-          </footer>
+</div><code>// by Techie Joe 2025</code>
+      <div class="my-3 text-right">
+        <p>{% include edit-link.html %}</p><!-- custom-body -->
+        <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
         </div>
       </div>
-    </div><!-- custom-body -->
-    <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
   </body>
 </html>
