--- a/nova/legacy.html
+++ b/nova/legacy.html
@@ -8,9 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.5615"/>
-    <link id="_style_nova" rel="stylesheet" href="/dove/assets/nova/css/nova.css?v=0.0.2.5615"/>
-    <link id="_style_basic" rel="stylesheet" href="/dove/assets/nova/css/basic.css?v=0.0.2.5615"/><!-- custom-head -->
+    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.612"/>
+    <link id="_style_nova" rel="stylesheet" href="/dove/assets/nova/css/nova.css?v=0.0.2.612"/>
+    <link id="_style_basic" rel="stylesheet" href="/dove/assets/nova/css/basic.css?v=0.0.2.612"/><!-- custom-head -->
     <!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
@@ -183,13 +183,13 @@
   <li>level 1 item</li>
 </ul>
 
-<!-- <h3 id="small-image">Small image</h3>
+<h3 id="small-image">Small image</h3>
 
 <p><img src="https://techie-joe.github.io/core/images/octocat-64x64.png" alt="Small image" /></p>
 
 <h3 id="large-image">Large image</h3>
 
-<p><img src="https://techie-joe.github.io/core/images/299-1024x368.jpg" alt="Large image" /></p> -->
+<p><img src="https://techie-joe.github.io/core/images/branching-2098x528.png" alt="Large image" /></p>
 
 <h3 id="definition-lists-can-be-used-with-html-syntax">Definition lists can be used with HTML syntax.</h3>
 
@@ -220,6 +220,6 @@
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.5615"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.612"></script>
   </body>
 </html>
