--- a/primer/404.html
+++ b/primer/404.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style_primer" rel="stylesheet" href="/dove/assets/primer/css/style.css?v=0.0.2.5615"/><!-- custom-head -->
+    <link id="_style_primer" rel="stylesheet" href="/dove/assets/primer/css/style.css?v=0.0.2.612"/><!-- custom-head -->
     <!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
@@ -17,13 +17,17 @@
       <h1>Oops! Nothing found</h1>
       <p>The content you are looking for is not here.</p>
       <div style="margin-top:8rem"></div>
-      <p>{% include back.html %}{% include gohome.html %}
-      </p><code>// by Techie Joe 2025</code>
-      <div class="my-3 text-right">
-        <p>{% include edit-link.html %}</p><!-- custom-body -->
-        <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
-        </div>
-      </div>
+      <hr/>
+      <p><a href="?back" onclick="event.preventDefault();(function(w){var h=w.history;w.opener?w.close():h.length&gt;1?h.back():w.location.href='/';})(window)" title="Back to previous page">👈 Back</a>
+<a href="/dove" title="Go to Home Page">Home</a>
+      </p>
+      <div class="footer border-top border-gray-light mt-5 pt-3 text-right text-gray"><code>// by Techie Joe 2025</code>
+      </div><!-- custom-body -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
+      <script>
+        anchors?.add();
+        
+      </script>
     </div>
   </body>
 </html>
