--- a/primer/home.html
+++ b/primer/home.html
@@ -8,18 +8,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style_primer" rel="stylesheet" href="/dove/assets/primer/css/style.css?v=0.0.2.5615"/><!-- custom-head -->
+    <link id="_style_primer" rel="stylesheet" href="/dove/assets/primer/css/style.css?v=0.0.2.612"/><!-- custom-head -->
     <!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="container-lg px-3 my-5 markdown-body">
       <h1><a href="/dove">Dove</a></h1>
-      <p><code>// content for : Home</code></p><code>// by Techie Joe 2025</code>
-      <div class="my-3 text-right">
-        <p>{% include edit-link.html %}</p><!-- custom-body -->
-        <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
-        </div>
-      </div>
+      <h2>Home</h2>
+      <p><code>// content</code></p>
+      <div class="footer border-top border-gray-light mt-5 pt-3 text-right text-gray"><code>// by Techie Joe 2025</code>
+      </div><!-- custom-body -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
+      <script>
+        anchors?.add();
+        
+      </script>
     </div>
   </body>
 </html>
