--- a/primer/index.html
+++ b/primer/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style_primer" rel="stylesheet" href="/dove/assets/primer/css/style.css?v=0.0.2.5615"/><!-- custom-head -->
+    <link id="_style_primer" rel="stylesheet" href="/dove/assets/primer/css/style.css?v=0.0.2.612"/><!-- custom-head -->
     <!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
@@ -17,7 +17,7 @@
 
 <h2 id="better-control-over-contents">Better control over contents</h2>
 
-<p><img src="https://techie-joe.github.io/core/images/299-400x300.jpg" alt="Featured image" class="float-right ml mb" width="400" height="300" /></p>
+<p><img src="https://techie-joe.github.io/core/images/299-400x300.jpg" alt="Featured image" class="float-right ml-3 mb-3" width="400" height="300" /></p>
 
 <p class="text-justify big-first">Writing an article can be exciting when you can add few things here and there. The <code class="language-plaintext highlighter-rouge">big-first</code> class will enlarge the first letter of a paragraph. While <code class="language-plaintext highlighter-rouge">text-justify</code> neatly aligns your text to its container. You can also include images and <a href="#" onclick="event.preventDefault();">hyperlinks</a> to make things more engaging.</p>
 
@@ -439,12 +439,14 @@ Every new line in footnote should be prefixed with 2 space or 4 space indentatio
       <p>Named footnotes will still render with numbers instead of the text but allow easier identification and linking. <a href="#fnref:note" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
     </li>
   </ol>
-</div><code>// by Techie Joe 2025</code>
-      <div class="my-3 text-right">
-        <p>{% include edit-link.html %}</p><!-- custom-body -->
-        <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
-        </div>
-      </div>
+</div>
+      <div class="footer border-top border-gray-light mt-5 pt-3 text-right text-gray"><code>// by Techie Joe 2025</code>
+      </div><!-- custom-body -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
+      <script>
+        anchors?.add();
+        
+      </script>
     </div>
   </body>
 </html>
