--- a/primer/page.html
+++ b/primer/page.html
@@ -8,21 +8,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style_primer" rel="stylesheet" href="/dove/assets/primer/css/style.css?v=0.0.2.612"/><!-- custom-head -->
+    <link id="_style_primer" rel="stylesheet" href="/dove/assets/primer/css/style.css?v=0.0.2.3904"/><!-- custom-head -->
     <!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="container-lg px-3 my-5 markdown-body">
       <h1><a href="/dove">Dove</a></h1>
-      <h2>Welcome to another page</h2>
-      <p><code>// yay</code></p>
-      <div style="margin-top:8rem"></div>
-      <hr/>
-      <p><a href="?back" onclick="event.preventDefault();(function(w){var h=w.history;w.opener?w.close():h.length&gt;1?h.back():w.location.href='/';})(window)" title="Back to previous page">👈 Back</a>
-<a href="/dove" title="Go to Home Page">Home</a><b> : </b><a href="legacy.html">Next page</a>
-      </p>
-      <div class="footer border-top border-gray-light mt-5 pt-3 text-right text-gray"><code>// by Techie Joe 2025</code>
+      <h2>Page</h2>
+      <p><code>// content for : Page</code></p>
+      <div class="footer border-top border-gray-light mt-5 pt-3 text-right text-gray">
+        <p><code>// by Techie Joe 2025</code></p>
+        <p>This site is open source. <a href="https://github.com/techie-joe/dove/edit/main/_pugs/primer/page.html.pug">Improve this page</a>.</p>
       </div><!-- custom-body -->
+      <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
+      </div>
+      <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
+      <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.3904"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
       <script>
         anchors?.add();
